--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -1,8 +1,8 @@
-{% extends "::anonymous.html.twig" %}
+{% extends "HexmediaUserBundle::layout.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
-{% block content %}
+{% block body %}
 {% if error %}
 <div>{{ error|trans }}</div>
 {% endif %}
@@ -21,4 +21,4 @@
 
     <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
 </form>
-{% endblock content %}
+{% endblock body %}
